scripts/nullness/annotator/url3f8d6440dd_huiwq1990_CognativeModel_tgz-pJ8-clarion_samples_HelloWorldJ8.txt
../annotator/url3f8d6440dd_huiwq1990_CognativeModel_tgz-pJ8-clarion_samples_HelloWorldJ8/src/sim/Hello.java:8: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url3f8d6440dd_huiwq1990_CognativeModel_tgz-pJ8-clarion_samples_HelloWorldJ8/src/clarion/samples/HelloWorld.java:8: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url3f8d6440dd_huiwq1990_CognativeModel_tgz-pJ8-clarion_samples_HelloWorldJ8/src/clarion/samples/XOR.java:10: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url3f8d6440dd_huiwq1990_CognativeModel_tgz-pJ8-clarion_samples_HelloWorldJ8/src/sim/Hello.java:144: error: cannot find symbol
	@Initializer public void initializeAgentInternalSpace() {
	 ^
  symbol:   class Initializer
  location: class Hello
../annotator/url3f8d6440dd_huiwq1990_CognativeModel_tgz-pJ8-clarion_samples_HelloWorldJ8/src/clarion/samples/HelloWorld.java:142: error: cannot find symbol
	@Initializer public void initializeAgentInternalSpace() {
	 ^
  symbol:   class Initializer
  location: class HelloWorld
../annotator/url3f8d6440dd_huiwq1990_CognativeModel_tgz-pJ8-clarion_samples_HelloWorldJ8/src/clarion/samples/XOR.java:174: error: cannot find symbol
	@Initializer public void initializeSensoryInformationSpace() {
	 ^
  symbol:   class Initializer
  location: class XOR
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
6 errors
